chore: add core dependencies (openai, zod, dropzone, p-limit, lucide)

--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.469.0",
     "next": "16.1.6",
+    "openai": "^4.77.3",
+    "p-limit": "^6.2.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-dropzone": "^14.3.5",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
