--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.2",
     "lucide-react": "^0.469.0",
     "next": "16.1.6",
     "openai": "^4.104.0",
